@@ -15,11 +15,11 @@
  */
 package io.gravitee.llama.cpp.nativelib;
 
+import static io.gravitee.llama.cpp.LlamaRuntime.ggml_backend_load_all;
+import static java.util.function.Predicate.not;
+
 import io.gravitee.llama.cpp.platform.Platform;
 import io.gravitee.llama.cpp.platform.PlatformResolver;
-import org.reflections.Reflections;
-import org.reflections.scanners.Scanners;
-
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -27,9 +27,8 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.stream.Stream;
-
-import static io.gravitee.llama.cpp.LlamaRuntime.ggml_backend_load_all;
-import static java.util.function.Predicate.not;
+import org.reflections.Reflections;
+import org.reflections.scanners.Scanners;
 
 /**
  * @author Rémi SULTAN (remi.sultan at graviteesource.com)
@@ -37,102 +36,101 @@ import static java.util.function.Predicate.not;
  */
 public final class LlamaLibLoader {
 
-    static final String LLAMA_CPP_LIB_PATH = "LLAMA_CPP_LIB_PATH";
-    static final String LLAMA_CPP_USE_TMP_PATH_LIBS = "LLAMA_CPP_USE_TMP_LIB_PATH";
+  static final String LLAMA_CPP_LIB_PATH = "LLAMA_CPP_LIB_PATH";
+  static final String LLAMA_CPP_USE_TMP_PATH_LIBS = "LLAMA_CPP_USE_TMP_LIB_PATH";
 
-    static final String DYLIB_EXT = ".dylib";
-    static final String SO_EXT = ".so";
+  static final String DYLIB_EXT = ".dylib";
+  static final String SO_EXT = ".so";
 
-    private static final String LLAMA_CPP_FOLDER = ".llama.cpp";
-    public static final String USER_HOME = System.getProperty("user.home");
+  private static final String LLAMA_CPP_FOLDER = ".llama.cpp";
+  public static final String USER_HOME = System.getProperty("user.home");
 
-    private LlamaLibLoader() {
+  private LlamaLibLoader() {}
+
+  public static void load() {
+    String envLibPath = System.getenv(LLAMA_CPP_LIB_PATH);
+    if (envLibPath != null && !envLibPath.isBlank()) {
+      loadFromExternalPath(envLibPath);
+    } else {
+      loadFromClasspath(PlatformResolver.platform());
     }
+  }
 
-    public static void load() {
-        String envLibPath = System.getenv(LLAMA_CPP_LIB_PATH);
-        if (envLibPath != null && !envLibPath.isBlank()) {
-            loadFromExternalPath(envLibPath);
-        } else {
-            loadFromClasspath(PlatformResolver.platform());
+  private static void loadFromExternalPath(String envLibPath) {
+    try {
+      boolean useTmpPath = Boolean.parseBoolean(System.getProperty(LLAMA_CPP_USE_TMP_PATH_LIBS));
+      if (useTmpPath) {
+        var destination = Files.createTempDirectory(LLAMA_CPP_FOLDER);
+        Files.copy(Path.of(envLibPath), destination, StandardCopyOption.REPLACE_EXISTING);
+        load(destination.toString());
+      } else {
+        load(envLibPath);
+      }
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  public static void load(String path) {
+    load(path, PlatformResolver.platform());
+  }
+
+  public static void load(String path, Platform platform) {
+    safeWalk(path)
+      .map(Path::toAbsolutePath)
+      .map(Path::toString)
+      .filter(not(path::equals))
+      .filter(file ->
+        switch (platform.os()) {
+          case MAC_OS_X -> file.endsWith(DYLIB_EXT);
+          case LINUX -> file.endsWith(SO_EXT);
         }
+      )
+      .forEach(System::load);
+  }
+
+  private static void loadFromClasspath(Platform platform) {
+    try {
+      boolean useTmpPath = Boolean.parseBoolean(System.getProperty(LLAMA_CPP_USE_TMP_PATH_LIBS));
+      var libDirectory = useTmpPath ? Files.createTempDirectory(LLAMA_CPP_FOLDER) : getHomeLlamaCpp();
+
+      if (!useTmpPath && Files.isDirectory(libDirectory) && !Files.list(libDirectory).toList().isEmpty()) {
+        load(libDirectory.toString());
+      } else {
+        var reflections = new Reflections(platform.getPackage(), Scanners.Resources);
+        reflections.getResources(".+").forEach(name -> copyFromClasspath(name, libDirectory));
+
+        load(libDirectory.toString());
+      }
+    } catch (IOException e) {
+      throw new RuntimeException(e);
     }
+  }
 
-    private static void loadFromExternalPath(String envLibPath) {
-        try {
-            boolean useTmpPath = Boolean.parseBoolean(System.getProperty(LLAMA_CPP_USE_TMP_PATH_LIBS));
-            if (useTmpPath) {
-                var destination = Files.createTempDirectory(LLAMA_CPP_FOLDER);
-                Files.copy(Path.of(envLibPath), destination, StandardCopyOption.REPLACE_EXISTING);
-                load(destination.toString());
-            } else {
-                load(envLibPath);
-            }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+  private static Path getHomeLlamaCpp() throws IOException {
+    var homeLlamaCpp = Paths.get(USER_HOME, LLAMA_CPP_FOLDER);
+    return Files.exists(homeLlamaCpp) ? homeLlamaCpp : Files.createDirectory(homeLlamaCpp);
+  }
+
+  private static void copyFromClasspath(String name, Path libDirectory) {
+    try {
+      var classLoader = Thread.currentThread().getContextClassLoader();
+
+      var resource = classLoader.getResource(name);
+      String[] fileSplit = resource.getFile().split(File.separator);
+      String fileName = fileSplit[fileSplit.length - 1];
+
+      Files.write(libDirectory.resolve(fileName), resource.openStream().readAllBytes());
+    } catch (IOException e) {
+      throw new RuntimeException(e);
     }
+  }
 
-    public static void load(String path) {
-        load(path, PlatformResolver.platform());
+  private static Stream<Path> safeWalk(String libPath) {
+    try {
+      return Files.walk(Path.of(libPath));
+    } catch (IOException e) {
+      return Stream.empty();
     }
-
-    public static void load(String path, Platform platform) {
-        safeWalk(path)
-                .map(Path::toAbsolutePath)
-                .map(Path::toString)
-                .filter(not(path::equals))
-                .filter(file -> switch (platform.os()) {
-                    case MAC_OS_X -> file.endsWith(DYLIB_EXT);
-                    case LINUX -> file.endsWith(SO_EXT);
-                })
-                .forEach(System::load);
-    }
-
-    private static void loadFromClasspath(Platform platform) {
-        try {
-            boolean useTmpPath = Boolean.parseBoolean(System.getProperty(LLAMA_CPP_USE_TMP_PATH_LIBS));
-            var libDirectory = useTmpPath ? Files.createTempDirectory(LLAMA_CPP_FOLDER) : getHomeLlamaCpp();
-
-            if (!useTmpPath && Files.isDirectory(libDirectory) && !Files.list(libDirectory).toList().isEmpty()) {
-                load(libDirectory.toString());
-            } else {
-                var reflections = new Reflections(platform.getPackage(), Scanners.Resources);
-                reflections
-                        .getResources(".+")
-                        .forEach(name -> copyFromClasspath(name, libDirectory));
-
-                load(libDirectory.toString());
-            }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Path getHomeLlamaCpp() throws IOException {
-        var homeLlamaCpp = Paths.get(USER_HOME, LLAMA_CPP_FOLDER);
-        return Files.exists(homeLlamaCpp) ? homeLlamaCpp : Files.createDirectory(homeLlamaCpp);
-    }
-
-    private static void copyFromClasspath(String name, Path libDirectory) {
-        try {
-            var classLoader = Thread.currentThread().getContextClassLoader();
-
-            var resource = classLoader.getResource(name);
-            String[] fileSplit = resource.getFile().split(File.separator);
-            String fileName = fileSplit[fileSplit.length - 1];
-
-            Files.write(libDirectory.resolve(fileName), resource.openStream().readAllBytes());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    private static Stream<Path> safeWalk(String libPath) {
-        try {
-            return Files.walk(Path.of(libPath));
-        } catch (IOException e) {
-            return Stream.empty();
-        }
-    }
+  }
 }
